[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oncrawl-mcp-server"
version = "0.2.0"
description = "MCP server that exposes OnCrawl's API for use with Claude Code and Claude Desktop"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Antonio", email = "your.email@example.com" }
]
keywords = ["mcp", "oncrawl", "seo", "claude", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/oncrawl-mcp-server"
Issues = "https://github.com/yourusername/oncrawl-mcp-server/issues"

[project.scripts]
oncrawl-mcp-server = "oncrawl_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["oncrawl_mcp_server"]
